--- a/tetris_emulatorDX.vcxproj
+++ b/tetris_emulatorDX.vcxproj
@@ -145,6 +145,7 @@
       <AdditionalIncludeDirectories>C:\Users\sykws\application\DXライブラリ\DxLib_VC\プロジェクトに追加すべきファイル_VC用;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalOptions>/arch:AVX2 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
