--- a/tetris_emulatorDX.vcxproj
+++ b/tetris_emulatorDX.vcxproj
@@ -200,6 +200,8 @@
     <Text Include="template\tetriplate_list.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="template\data\3rPC_Z_OZ_4.ttrp" />
+    <None Include="template\data\3rPC_Z_ZO_4.ttrp" />
     <None Include="template\data\BstdL_1-1.ttrp" />
     <None Include="template\data\BstdL_1-2.ttrp" />
     <None Include="template\data\BstdL_1-3.ttrp" />
@@ -218,6 +220,24 @@
     <None Include="template\data\hotcakeZ_1-1.ttrp" />
     <None Include="template\data\hotcakeZ_2-1.ttrp" />
     <None Include="template\data\hotcakeZ_2-2.ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(LOJSIT).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(LOTJIS).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(LSIOJT).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(LTSJOI).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(OLJIST).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(OLJSIT).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(OLSJTI).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(SLTIJO).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(TJIOLS).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(TJLSIO).ttrp" />
+    <None Include="template\data\hotcakeZ_3-1(TJOLIS).ttrp" />
+    <None Include="template\data\newDT_LS_1-1.ttrp" />
+    <None Include="template\data\newDT_LS_1-2.ttrp" />
+    <None Include="template\data\newDT_LS_2-1.ttrp" />
+    <None Include="template\data\newDT_LS_3-1.ttrp" />
+    <None Include="template\data\newDT_LS_4-1.ttrp" />
+    <None Include="template\data\newDT_LS_4-2.ttrp" />
+    <None Include="template\data\newDT_LS_5-1.ttrp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
